# cf-compound-selection-demo

./: .gitignore  README.md  render.yaml
backend/: MCP_DEPLOYMENT_README.md  README.md  api.py  mcp_server_deploy.py  modal_deploy.py  pyproject.toml  test_mcp_deployment.py
backend/agentic_system/agents/: __init__.py  cf_efficacy_agent.py  compound_prioritization_agent.py  toxicity_screening_agent.py
backend/agentic_system/agents/compound_prioritization/: compound_prioritization_agent.py
backend/agentic_system/agents/compound_prioritization/cf_efficacy/: cf_efficacy_agent.py  cf_efficacy_agent_new.py
backend/agentic_system/litl_data/: 0.get_no_litl_runs.ipynb  1.get_no_litl_reflections.ipynb  create_litl_databases.ipynb  litl_utils.py
backend/agentic_system/tools/: chembl_mcp_server.py  chembl_tools.py  chembl_tools_raw.py  litl_tools.py  litl_tools_new.py  pubchem_mcp_server.py  pubchem_tools.py  pubchem_tools_raw.py  search.py  search_tools.py  tool_utils.py
backend/examples/: get_compound_results.py  get_tanespimycin_results.py  litl_eval.ipynb  run_agent.ipynb  run_agent.py  run_agents.ipynb  run_compound_prioritization_agent.py  run_efficacy_agent.py  run_toxicity_agent.py  viz_compound_results.ipynb
backend/examples/compound_results/: tanespimycin_result_0.json  tanespimycin_result_1.json
backend/optimize_tools/: 0.evaluate_original_tools.ipynb  0.evaluate_summarized_tools.ipynb  0.evaluate_unoptimized_tools.ipynb  1.evaluate_summarized_tools.ipynb  evaluate_efficacy_agent.py
frontend/: .env.local  netlify.toml  package-lock.json  package.json
(+8 files in other folders)
