[project]
name            = "cf-compound-selection-backend"
version         = "0.1.0"
description     = "Backend for cardiac fibrosis compound selection system."
readme          = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic",
    "mcp",
    "dspy",
    "httpx",
    "jupyter",
    "ipykernel",
    "python-dotenv",
    "pubmedclient",
    "fastapi",
    "uvicorn",
    "modal"
]

[tool.ruff]
exclude = []

[tool.ruff.per-file-ignores]
"agentic_system/agents/*.py" = ["E402"]